CANDLEPIN-600: Stop passing pool manager as param
- Replace pool manager passed as param with injection
- Extract code that handles delayed pool operations out of pool manager